--- a/views/index.html
+++ b/views/index.html
@@ -37,6 +37,15 @@
 	<div class="container-fluid">
 		<div class="flex-box center">
 			<div class="flex-item w-1of6 trs">
+				<a class="demo-link byy-clear" href="/demos/js-typper/index.html" target="_blank">
+					<span class="img-wrap"><img src="/demos/js-typper/post.png" alt=""></span>
+					<p class="demo-title byy-elip" title="form designer">JS 模拟打字效果</p>
+					<p class="demo-des byy-elip" title="专业打字员">
+						专业打字员
+					</p>
+				</a>
+			</div>
+			<div class="flex-item w-1of6 trs">
 				<a class="demo-link byy-clear" href="/demos/edu-1/index.html" target="_blank">
 					<span class="img-wrap"><img src="/demos/edu-1/post.png" alt=""></span>
 					<p class="demo-title byy-elip" title="form designer">博育云-新版数校首页</p>
