--- a/views/index.html
+++ b/views/index.html
@@ -37,6 +37,24 @@
 	<div class="container-fluid">
 		<div class="flex-box center">
 			<div class="flex-item w-1of6 trs">
+				<a class="demo-link byy-clear" href="/demos/css-arrow/index.html" target="_blank">
+					<span class="img-wrap"><img src="/demos/css-arrow/post.png" alt=""></span>
+					<p class="demo-title byy-elip" title="form designer">css3实现下拉箭头</p>
+					<p class="demo-des byy-elip" title="css3实现下拉箭头">
+						css3实现下拉箭头效果
+					</p>
+				</a>
+			</div>
+			<div class="flex-item w-1of6 trs">
+				<a class="demo-link byy-clear" href="/demos/canvas-2/index.html" target="_blank">
+					<span class="img-wrap"><img src="/demos/canvas-2/post.png" alt=""></span>
+					<p class="demo-title byy-elip" title="form designer">canvas 学习，实现时钟效果</p>
+					<p class="demo-des byy-elip" title="canvas 实现时钟效果-学习">
+						canvas 实现时钟效果-学习
+					</p>
+				</a>
+			</div>
+			<div class="flex-item w-1of6 trs">
 				<a class="demo-link byy-clear" href="/demos/js-typper/index.html" target="_blank">
 					<span class="img-wrap"><img src="/demos/js-typper/post.png" alt=""></span>
 					<p class="demo-title byy-elip" title="form designer">JS 模拟打字效果</p>
