--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Lab - 前端实验室</title>
-	<link rel="stylesheet" href="http://www.byyui.com/byy/dist/css/default/byy.css">
+	<link rel="stylesheet" href="/plugins/byy/css/default/byy.css">
 	<style>
 		.trs{
 			-webkit-transition: all .3s ease;
@@ -36,6 +36,7 @@
 	</header>
 	<div class="container-fluid">
 		<div class="flex-box center">
+			
 			<div class="flex-item w-1of6 trs">
 				<a class="demo-link byy-clear" href="/demos/css-arrow/index.html" target="_blank">
 					<span class="img-wrap"><img src="/demos/css-arrow/post.png" alt=""></span>
@@ -141,4 +142,5 @@
 	</div>
 </body>
 </html>
-<script type="text/javascript" src="http://www.byyui.com/byy/dist/byy.js"></script>
+<script type="text/javascript" src="/plugins/byy/byy.js"></script>
+<script type="text/javascript" src="/plugins/tongji.js"></script>
