--- a/views/index.html
+++ b/views/index.html
@@ -42,6 +42,15 @@
 		<div class="flex-box center">
 			
 			<div class="flex-item w-1of6 trs">
+				<a class="demo-link byy-clear" href="/demos/css-notice/index.html" target="_blank">
+					<span class="img-wrap"><img src="/demos/css-notice/post.png" alt=""></span>
+					<p class="demo-title byy-elip" title="css右侧消息展示">css右侧消息展示</p>
+					<p class="demo-des byy-elip" title="css右侧消息展示">
+						css右侧消息展示
+					</p>
+				</a>
+			</div>
+			<div class="flex-item w-1of6 trs">
 				<a class="demo-link byy-clear" href="/demos/js-treegrid/index.html" target="_blank">
 					<span class="img-wrap"><img src="/demos/js-treegrid/post.png" alt=""></span>
 					<p class="demo-title byy-elip" title="jquery treegrid扩展">jquery treegrid扩展</p>
