--- a/views/index.html
+++ b/views/index.html
@@ -61,7 +61,15 @@
 	</div>
 	<div class="container-fluid">
 		<div class="block-wrap byy-clear">
-			
+			<div class="demo-block trs">
+				<a class="demo-link byy-clear" href="/demos/speed/index.html" target="_blank">
+					<span class="img-wrap"><img src="/demos/speed/post.jpg" alt=""></span>
+					<p class="demo-title byy-elip" title="来测试下你的手速有多块">测手速</p>
+					<p class="demo-des byy-elip" title="来测试下你的手速有多块">
+						来测试下你的手速有多块
+					</p>
+				</a>
+			</div>
 			<div class="demo-block trs">
 				<a class="demo-link byy-clear" href="/demos/js-caculator/index.html" target="_blank">
 					<span class="img-wrap"><img src="/demos/js-caculator/post.png" alt=""></span>
