number change demos

--- a/views/index.html
+++ b/views/index.html
@@ -62,6 +62,15 @@
 	<div class="container-fluid">
 		<div class="block-wrap byy-clear">
 			<div class="demo-block trs">
+				<a class="demo-link byy-clear" href="/demos/js-numbers-change/index.html" target="_blank">
+					<span class="img-wrap"><img src="/demos/js-numbers-change/post.png" alt=""></span>
+					<p class="demo-title byy-elip" title="数字增长">数字增长</p>
+					<p class="demo-des byy-elip" title="让数字在规定的时间内增长">
+						让数字在规定的时间内增长
+					</p>
+				</a>
+			</div>
+			<div class="demo-block trs">
 				<a class="demo-link byy-clear" href="/demos/speed/index.html" target="_blank">
 					<span class="img-wrap"><img src="/demos/speed/post.jpg" alt=""></span>
 					<p class="demo-title byy-elip" title="来测试下你的手速有多块">测手速</p>
@@ -72,7 +81,7 @@
 			</div>
 			<div class="demo-block trs">
 				<a class="demo-link byy-clear" href="/demos/js-caculator/index.html" target="_blank">
-					<span class="img-wrap"><img src="/demos/js-caculator/post.png" alt=""></span>
+					<span class="img-wrap"><img src="/demos/js-caculator/post.jpg" alt=""></span>
 					<p class="demo-title byy-elip" title="小工具-模拟实现计算器">小工具-模拟实现计算器</p>
 					<p class="demo-des byy-elip" title="实现一个简单的计算器...简单的">
 						实现一个简单的计算器...简单的
