--- a/views/exam/index.html
+++ b/views/exam/index.html
@@ -2,12 +2,29 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"> 
 	<title>劳务考核</title>
+	<style>
+		.title{}
+	</style>
 </head>
 <body>
-	劳务考核题目
+	<div class="title">劳务考核题目</div>
+	<div class="des">
+		本次考核共计100道题目，其中单选题目40道，多选题目40道，判断题目10道，解析题目10道。
+	</div>
+	<div class="time">
+		考核时间不限时
+	</div>
+	<!-- 题目开始 --> 
+	
+	<!-- 结束后给出结果 -->
+	
+
+
+	
 	<br />
-	共计100道题目，其中单选40，多选40，判断10，解析10.
+	
 	<br/>
 	考核时间30分钟。
 	<br />
