--- a/views/caipu/detail.html
+++ b/views/caipu/detail.html
@@ -16,7 +16,7 @@
 			margin-top:-5px;
 			padding:15px 15px;
 			text-align:left;
-			font-size:0.8em;
+			font-size:1.2em;
 			color:#333;
 			background-color:#dfe4df;
 			line-height:20px;
@@ -35,7 +35,7 @@
 			border-spacing: 0;
 		}
 		table tr{border:none;height:2em;line-height:2em;}
-		table tr td{width:50%;text-align:left;font-size:0.6em;padding-left:2em;border:none;border-collapse:collapse;}
+		table tr td{width:50%;text-align:left;font-size:1em;padding-left:2em;border:none;border-collapse:collapse;}
 
 		table tr:nth-child(odd){
 			background-color:#c9e8e4;
@@ -81,6 +81,7 @@
 </head>
 <body>
 	{{ if caipu }}
+	<div style="display:none;"><img src="{{caipu.albums}}" style="width:300px;height:300px;" alt=""></div>
 	<div class="album">
 		<img src="{{caipu.albums}}" alt="">
 	</div>
