--- a/views/caipu/detail.html
+++ b/views/caipu/detail.html
@@ -4,6 +4,11 @@
 	<meta charset="UTF-8">
 	<title>{{ caipu.title ? caipu.title : '菜谱系列'}}</title>
 	<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="{{caipu.title}}">
+	<meta property="og:description" content="{{caipu.intro}}">
+	<meta property="og:image" content="{{caipu.albums}}">
+	<meta property="og:url" content="http://gstyle.byyui.com/caipu/show/{{caipu.id}}">
 	<style>
 		html,body{padding:0px;margin:0px;width:100%;}
 		body{
@@ -81,7 +86,7 @@
 </head>
 <body>
 	{{ if caipu }}
-	<div style="display:none;"><img src="{{caipu.albums}}" style="width:300px;height:300px;" alt=""></div>
+	<div style="display:none;"><img src="{{caipu.albums}}" width="300px" height="300px" alt="" /></div>
 	<div class="album">
 		<img src="{{caipu.albums}}" alt="">
 	</div>
