--- a/views/caipu/home.html
+++ b/views/caipu/home.html
@@ -3,8 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>我的菜谱书</title>
+	<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
+	<meta property="og:type" content="website" />
+	
 </head>
 <body>
-	菜谱
+	<div style="height:100px;line-height:100px;font-size:3em;margin-top:100px;text-align:center;">
+		正在紧密研发中，敬请期待...
+	</div>
 </body>
 </html>
