--- a/public/caipu/detail.css
+++ b/public/caipu/detail.css
@@ -11,10 +11,10 @@ body{
 	margin-top:-5px;
 	padding:15px 15px;
 	text-align:left;
-	font-size:1.2em;
+	font-size:0.8em;
 	color:#333;
 	background-color:#dfe4df;
-	line-height:20px;
+	line-height:1.5em;
 }
 .content{padding:10px 0px;}
 .title{
