--- a/views/caipu/detail.html
+++ b/views/caipu/detail.html
@@ -22,7 +22,7 @@
 		{{caipu.intro}}
 	</div>
 	<div class="share">
-		<img src="/icons/heart.png" alt="">长按关注,右上角分享哦!<img src="/icons/heart.png" alt="">
+		<img src="/icons/heart.png" alt="">长按关注,右上角分享哦!更多惊喜等着你~~<img src="/icons/heart.png" alt="">
 	</div>
 	<div class="content">
 		<div class="title">—— 主材 ——</div>
@@ -63,6 +63,10 @@
 			</div>
 			{{ /each }}
 		</div>
+	</div>
+	<div class="share">
+		<img src="/icons/heart.png" alt="">
+		温馨提示:如果您想找到更多的菜谱，可以关注"公众号"，点击"菜谱学习"后，进入文章，点击"阅读原文"来查看。那里有更多的菜谱等你来看，足有上万道呢！
 	</div>
 	<div class="content">
 		<div class="title">—— 相关菜谱 ——</div>
