--- a/public/caipu/detail.css
+++ b/public/caipu/detail.css
@@ -95,3 +95,59 @@ table tr:nth-child(odd){
 	position: relative;
 	top:5px;
 }
+.top-title img{
+	width:1em;
+	height:1em;
+	position:relative;
+	top:5px;
+}
+.top-title .likenum{
+	font-size:0.8em;
+	color:#00BCD4;
+	margin-left:5px;
+}
+.likeopt{
+	height:4em;
+	line-height:4em;
+}
+.likeopt img{
+	width:2em;
+	height:2em;
+}
+
+footer{
+	position:fixed;
+	bottom:0px;
+	width:100%;
+	height:4em;
+	line-height:4em;
+	font-size:0.8em;
+	box-sizing:border-box;
+	background-color: #f2f2f2;
+	border-top:1px solid #b6d6f7;;
+}
+footer span{
+	width:50%;
+	float:left;
+	text-align:center;
+	box-sizing:border-box;
+	color:#ff6600;
+	cursor:pointer;
+}
+footer span:first-child{
+	border-right:1px solid #b6d6f7;
+}
+footer img{
+	width:2em;
+	height:2em;
+	position:relative;
+	top:8px;
+	margin-right:1em;
+}
+.show{
+	display:block;
+}
+.hide{
+	display:none;
+}
+.active{color:#25ca92!important;}
